--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
   <canvas id="c"></canvas>
 
   <div class="tip">
-    Put <strong>scene.png</strong> in your repo root to use it as the background.
-    Put your pixel couple PNG as <strong>couple.png</strong> (transparent background).
-    Tap/click anywhere to start music (autoplay rule).
+    Just us slow dancing, while looking at the scenary 💜
   </div>
 
   <div class="hud" id="tapArea" role="button" tabindex="0" aria-label="Play or pause music">
@@ -268,3 +266,4 @@
 </script>
 </body>
 </html>
+
