--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <canvas id="c"></canvas>
 
   <div class="tip">
-    Just us slow dancing, while looking at the scenary 💜
+    Just us slow dancing, while looking at the moon 💜
   </div>
 
   <div class="hud" id="tapArea" role="button" tabindex="0" aria-label="Play or pause music">
@@ -266,4 +266,5 @@
 </script>
 </body>
 </html>
+
 
